--- a/index.html
+++ b/index.html
@@ -1,9 +1,124 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>My blog</title>
-    <body>
-        <h1>Kia ora Taiao! (Hello World!)</h1>
-        <p> This is the beginning of my website home page.</p>
-        <p> It will eventually contain a list of links to all my blogs. </p>
-    </body>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="./css/main.css" rel="stylesheet" type="text/css">
+  <!--
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    -->
+
+</head>
+
+<body>
+    <!--
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown link
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li class="dropdown-item">hello</li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <br><br><br>
+
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dumm
+        y text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but a
+        lso the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets </p>
+      -->
+
+    <div class="navbar">
+            <a href="./index.html">Home</a>
+            <a href="./blog/blogposts.html">Blog</a>
+            <a href="./blog/sprints.html">Sprints</a>
+            <a href="./blog/valuesidentity.html">Identity and Values</a>
+    </div>
+    
+    <br>
+    <h2>Kia ora Taiao! Welcome to my Blog</h2>
+    <br>
+    <p>My name is Fraser and its a pleasure to me you this blog contains my learning for dev academy</p>
+    <br>
+    <div class="myCenterWrapper">
+        <div class="contents">
+            <h2>Table of contents</h2>
+
+            <ul>
+                <li><p><span>Blog post 1:</span>Research Topic: differences between relative, absoulute, and fixed positioning?</p></li>
+                <li><p><span>Blog post 2:</span></p></li>
+                <li><p><span>Blog post 3:</span</p></li>
+            <ul>
+            <form action="./blog/blogposts.html">
+            <button>Go To blog</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="myCenterWrapper">
+        <table>
+            <tr>
+                <th>Sprints</th>
+            </tr>
+            <tr>
+                <td><a href="url">Sprint 1</a></td>
+                <td><strong>Complete</strong></td>
+            </tr>
+            <tr>
+                <td><a href="url">Sprint 2</a></td>
+                <td><strong>Incomplete</strong></td>
+            </tr>
+            <tr>
+                <td><a href="url">Sprint 3</a></td>
+                <td><strong>Incomplete</strong></td>
+            </tr>
+            <tr>
+                <td><a href="url">Sprint 4</a></td>
+                <td><strong>Incomplete</strong></td>
+            </tr>
+            <tr>
+                <td><a href="url">Sprint 5</a></td>
+                <td><strong>Incomplete</strong></td>
+            </tr>
+        </table>
+    </div>
+
+    
+
+    <div class="imagebox">
+        <img id="imagebanner" src="./images/PursuitHome.jpg" alt="picpursuit">
+    </div>
+
+<footer>
+    <p>Author: Fraser Pearson</p>
+    <a href="https://github.com/fraser-pearson/fraser-pearson.github.io">https://github.com/fraser-pearson/fraser-pearson.github.io</a></p>
+</footer>
+</body>
 </html>
+
+
