--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Home page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./css/main.css" rel="stylesheet" type="text/css">
-  <!--
+  <!-- bootstrap if needed
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     -->
@@ -13,51 +13,13 @@
 </head>
 
 <body>
-    <!--
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown link
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li class="dropdown-item">hello</li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-
-      <br><br><br>
-
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dumm
-        y text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but a
-        lso the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets </p>
-      -->
 
     <div class="navbar">
             <a href="./index.html">Home</a>
             <a href="./blog/blogposts.html">Blog</a>
             <a href="./blog/sprints.html">Sprints</a>
-            <a href="./blog/valuesidentity.html">Identity and Values</a>
+            <a href="./blog/identity-values.html">Identity and Values</a>
+            <a href="./blog/learning-plan.html">Learning plan</a>
     </div>
     
     <br>
@@ -70,10 +32,13 @@
             <h2>Table of contents</h2>
 
             <ul>
-                <li><p><span>Blog post 1:</span>Research Topic: differences between relative, absoulute, and fixed positioning?</p></li>
-                <li><p><span>Blog post 2:</span></p></li>
-                <li><p><span>Blog post 3:</span</p></li>
+                <li><span>Blog post 1:</span>Research Topic: differences between relative, absoulute, and fixed positioning?</li>
+                <li><span>Blog post 2:</span></li>
+                <li><span>Blog post 3:</span></li>
             <ul>
+
+            <br>
+
             <form action="./blog/blogposts.html">
             <button>Go To blog</button>
             </form>
@@ -81,6 +46,7 @@
     </div>
 
     <div class="myCenterWrapper">
+      <div class="sprintsbox">
         <table>
             <tr>
                 <th>Sprints</th>
@@ -91,7 +57,7 @@
             </tr>
             <tr>
                 <td><a href="url">Sprint 2</a></td>
-                <td><strong>Incomplete</strong></td>
+                <td><strong>Complete</strong></td>
             </tr>
             <tr>
                 <td><a href="url">Sprint 3</a></td>
@@ -106,6 +72,7 @@
                 <td><strong>Incomplete</strong></td>
             </tr>
         </table>
+      </div>
     </div>
 
     
