Added javascript blog

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <div class="navbar">
             <a href="./index.html">Home</a>
+            <a href="./blog/javascript-dom.html">Javascript Dom</a>
             <a href="./blog/blogposts.html">Blog</a>
             <a href="./blog/sprints.html">Sprints</a>
             <a href="./blog/identity-values.html">Identity and Values</a>
