Added Emotional blog to index

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="./blog/sprints.html">Sprints</a>
             <a href="./blog/identity-values.html">Identity and Values</a>
             <a href="./blog/learning-plan.html">Learning plan</a>
+            <a href="./blog/emotional-intelligence.html">Emotional Intelligence</a>
     </div>
     
     <br>
