--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <a href="./blog/identity-values.html">Identity and Values</a>
             <a href="./blog/learning-plan.html">Learning plan</a>
             <a href="./blog/emotional-intelligence.html">Emotional Intelligence</a>
+            <a href="./blog/problem-solving.html">Problem Solving</a>
+            <a href="./blog/neuroplasticity.html">Neuroplasticity</a>
     </div>
     
     <br>
