--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <a href="./blog/emotional-intelligence.html">Emotional Intelligence</a>
             <a href="./blog/problem-solving.html">Problem Solving</a>
             <a href="./blog/neuroplasticity.html">Neuroplasticity</a>
+            <a href="./blog/foundations-reflection.html">Reflection</a>
+            
     </div>
     
     <br>
